# esa-worldcover

./: .editorconfig  .gitignore  .markdownlint.yaml  CHANGELOG.md  README.md  docker_env  environment.yml  mypy.ini  requirements-dev.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
docker/: Dockerfile  build  cibuild  console  format  stac  test
docs/: conf.py  index.rst  installation_and_basic_usage.ipynb
examples/: collection.json  esa_worldcover_10m_2020_v100_n66e177.json  esa_worldcover_10m_2020_v100_n66w180.json  file-list.txt  test.json
examples/ESA_WorldCover_10m_2020_v100_N00E006/: ESA_WorldCover_10m_2020_v100_N00E006.json
examples/ESA_WorldCover_10m_2020_v100_N66E177/: ESA_WorldCover_10m_2020_v100_N66E177.json
examples/ESA_WorldCover_10m_2021_v200_N00E006/: ESA_WorldCover_10m_2021_v200_N00E006.json
examples/esa_worldcover_10m_2020_v100_n27w099/: esa_worldcover_10m_2020_v100_n27w099.json
examples/esa_worldcover_10m_2020_v100_n66e177/: esa_worldcover_10m_2020_v100_n66e177.json
scripts/: create_examples.py  lint  test
src/stactools/esa_worldcover/: __init__.py  commands.py  constants.py  metadata.py  stac.py
tests/: test_commands.py  test_module.py  test_stac.py
tests/data-files/: file-list.txt
tests/data-files/ESA_WorldCover_10m_2020_v100_N00E006/: ESA_WorldCover_10m_2020_v100_N00E006_InputQuality.tif  ESA_WorldCover_10m_2020_v100_N00E006_Map.tif
tests/data-files/ESA_WorldCover_10m_2020_v100_N66E177_Map/: ESA_WorldCover_10m_2020_v100_N66E177_InputQuality.tif  ESA_WorldCover_10m_2020_v100_N66E177_Map.tif
(+2 files in other folders)
