[metadata]
name = stactools-esa-worldcover
version = attr: stactools.esa_worldcover.__version__
description = stactools package for ESA WorldCover data
long_description = file: README.md
long_description_content_type = text/markdown
author = Preston Hartzell
author_email = preston.hartzell@gmail.com
url = https://github.com/stactools-packages/esa-worldcover
project_urls =
    Issues = https://github.com/stactools-packages/esa-worldcover/issues
keywords =
    stactools
    pystac
    catalog
    STAC
    ESA
    landcover
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools >= 0.3.0
    click != 8.1.0

[options.packages.find]
where = src
